--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,13 @@ body {
     font-family: "InterRegular";
     src: url("../Fonts/Inter/Inter_18pt-Regular.ttf");
   }
+  @font-face {
+    font-family: "RecoletaMedium";
+    src: url("../Fonts/Recoleta/Recoleta-Medium.ttf");
+  }
 .landing-section {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   color: white;
@@ -525,12 +529,13 @@ text-align: center;
     font-size: 22px;
 }
 .card {
-    width: 1000px; /* Width of the card */
+    width: 1000px !important; /* Width of the card */
     height: 350px !important; /* Height of the card */
     background-color: #FFFFFF;
     display: inline-block;
     margin-right: 20px; /* Space between cards */
     border: 1px solid #ddd; /* Optional border for better visual separation */
+    border-radius: 20px !important;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional shadow for depth effect */
   }
   .card span{
@@ -570,10 +575,26 @@ text-align: center;
   }
   
   .review p {
-    font-size: 16px; /* Adjust font size as needed */
-    line-height: 1.5;
+    margin-top: 20px;
+    font-size:23px; /* Adjust font size as needed */
+    color: #000000;
+    opacity: 0.8;
+    font-family: "RecoletaMedium";
+    /* line-height: 1.5; */
   }
-  
+  .car span{
+    line-height: 10px !important;
+  }
+  .infoo{
+    font-size: 18px;
+    font-family: "LufgaRegular" !important;
+    color: #000000;
+    opacity: 0.8;
+
+  }
+  .movee{
+    margin-top: 90px;
+  }
   @keyframes scroll {
     0% { transform: translateX(0); }
     100% { transform: translateX(-50%); }
