--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -635,7 +635,8 @@ text-align: center;
     font-family: "LufgaRegular" !important;
   }
   footer ul li{
- 
+    margin-top: 11px;
+
    list-style: none;
     color: #FFFFFF;
     font-size: 21.33px;
