--- a/Pages/IQTest/style.css
+++ b/Pages/IQTest/style.css
@@ -36,6 +36,7 @@ body {
 }
 .navbar-brand h2{
     color: #000000;
+    margin-left: 110px;
     font-size: 32.53px;
     font-family: "LufgaSemiBold" !important;
 }
@@ -54,6 +55,7 @@ body {
 }
 .active {
   opacity: 1 !important;
+  font-weight: 900 !important;
 }
 /* Styles for Join Us button */
 /* Navbar buttons container */
@@ -111,7 +113,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/images/testbg.png');
+    background-image: url('/assets/images/iqtest.png');
     background-size: cover;
     background-position: center;
     z-index: 1;
@@ -193,10 +195,18 @@ opacity: 0.7;
     cursor: pointer;
     z-index: 1;
 }
-.next{
-    color: #000000;
-    font-size: 42px;
-    font-family: "LufgaRegular" !important;
+
+.btn-secondary{
+  margin-top: 120px !important;
+  padding: 0 !important;
+width: 300px !important;
+height: 80px !important;
+border-radius: 85px !important;
+background-color: #000000 !important;
+color: #F5F4F9 !important;
+font-size: 32px !important;
+font-family: "LufgaRegular" !important;
+
 }
   footer{
     margin-top: 130px;
@@ -261,6 +271,7 @@ color: #000000;
 
   }
   .logo-footer{
+    margin-left: 110px !important;
     color: #000000;
     font-size: 32.53px;
     font-family: "LufgaSemiBold" !important;
@@ -273,11 +284,14 @@ color: #000000;
     border-top: 1px solid rgba(0, 0, 0, 0.8); /* #FFFFFF with 15% opacity */
     margin-bottom: 20px; /* Space between the hr and the row */
   }
+ 
     
   .question-section {
     margin-top: 50px;
 }
 .question-section .question {
+    margin-top: 70px;
+    margin-bottom: 30px;
     text-align: left;
     font-size: 25px;
     font-family: "LufgaRegular" !important;
@@ -302,74 +316,35 @@ color: #000000;
     align-items: center;
     margin-top: 20px;
 }
-.task-section {
-    background-color: #000000;
-    color: #FFFFFF;
-    padding: 50px 0;
-}
-.task-section .task-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-.task-section .task-title h3 {
-    margin: 0;
-    color: #FFFFFF;
-    font-family: "LufgaRegular" !important;
-    font-size: 42px;
-}
-.task-section .line {
-    flex-grow: 1;
-    border: none;
-    border-top: 2px solid #FFFFFF;
-    margin: 0 20px;
-}
-.task-section .video-container {
-    margin: 0 auto;
-}
-.custom-textarea {
-    background-color: rgba(255, 255, 255, 0.2) !important; 
-    width: 1200px !important; 
-    max-width: 100% !important;
-    border: 1px solid #757575 !important; 
-    color: #FFFFFF !important; 
-}
-.Advanced {
+
+
+.next{
+    margin-top: 120px;
     color: #000000;
-    padding: 50px 0;
-}
-.Advanced .task-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-.Advanced .task-title h3 {
-    margin: 0;
-    color: #000000;
-    font-family: "LufgaRegular" !important;
     font-size: 42px;
+    font-family: "LufgaRegular" !important;
 }
-.Advanced .line {
-    flex-grow: 1;
-    border: none;
-    border-top: 2px solid #000000;
-    margin: 0 20px;
-}
-.Advanced .video-container {
-    margin: 0 auto;
-}
-.Advanced .custom-textareas{
-    background-color: rgba(255, 255, 255, 0.1) !important; 
-    width: 1200px !important; 
-    max-width: 100% !important;
-    border: 1px solid #757575 !important; 
-    color: #000000 !important; 
+
+
+.para{
+  color: #000000;
+    font-family: "LufgaRegular" !important;
+    font-size: 25px;
 }
 @media (max-width: 768px) {
+  .question-section .question {
+
+    font-size: 21px;
+}
+
+  .task-section .question{
+    font-size: 11px;
+  }
+
+  .para {
+
+    font-size: 13px;
+}
    
     .navbar-buttons {
       display: flex;
@@ -415,9 +390,13 @@ color: #000000;
       }
       .question-section .btn{
         width: 100%;
+        font-size: 20px;
       }
       .navbar-brand h2 {
         font-size: 20.53px;
+    }
+    .Advanced .task-title h3 {
+      font-size: 18px;
     }
   }
   @media (max-width: 992px) {
