--- a/Pages/About/style.css
+++ b/Pages/About/style.css
@@ -22,12 +22,14 @@ body {
       src: url("/assets/Fonts/Recoleta/Recoleta-Medium.ttf");
     }
 .navbar {
-    background: transparent;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0) 100%) !important;
+
     position: absolute !important;
     width: 100% !important;
     height: 93px;
     z-index: 3 !important;
     font-size: 20px !important;
+
   }
   
 
@@ -42,6 +44,8 @@ body {
 }
 
 .navbar-nav .nav-link {
+  margin-right: 40px;
+
   color: #ffffff !important;
   opacity: 0.8;
   font-size: 20px !important;
@@ -344,7 +348,23 @@ color: #000000;
     
 
 @media (max-width: 768px) {
-   
+  .missionp {
+    padding-left: 0;
+    padding-top: 70px;
+    font-size: 14px;
+
+}
+  .mission {
+    font-size: 40px;
+}
+  .bottom-left-text {
+  
+    font-size: 12px;
+  
+}
+  .title {
+    font-size: 30px;
+}
     .navbar-buttons {
       display: flex;
       flex-direction: column;
@@ -365,6 +385,8 @@ color: #000000;
     }
     .navbar-brand img {
       width: 150px !important;
+      margin-left: 0 !important;
+
     }
     .w{
         width: 100% !important;
