--- a/Pages/EnglishSpeaking/style.css
+++ b/Pages/EnglishSpeaking/style.css
@@ -22,13 +22,13 @@ body {
       src: url("/assets/Fonts/Recoleta/Recoleta-Medium.ttf");
     }
     .navbar {
-        background: transparent;
-        position: absolute !important;
-        width: 100% !important;
-        height: 93px;
-        z-index: 3 !important;
-        font-size: 20px !important;
-    }
+      position: absolute !important;
+      width: 100% !important;
+      height: 93px;
+      z-index: 3 !important;
+      font-size: 20px !important;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0) 100%) !important;
+  }
 
 .navbar.scrolled {
   background-color: rgba(0, 0, 0, 0.8) !important;
@@ -46,14 +46,17 @@ body {
 }
 
 .navbar-nav .nav-link {
+  margin-right: 40px;
   color: #000000 !important;
   opacity: 0.8;
   font-size: 20px !important;
-  font-family: "LufgaRegular" !important;
+  font-family: "LufgaRegular" ;
 
 }
 .active {
   opacity: 1 !important;
+  font-family: "LufgaSemiBold" !important;
+
 }
 /* Styles for Join Us button */
 /* Navbar buttons container */
@@ -301,7 +304,7 @@ color: #000000;
   font-size: 24px;
   color: #000000;
   font-family: "LufgaRegular";
-  margin-bottom: 20px;
+  margin-bottom: 30px !important;
 }
 
 
@@ -394,7 +397,8 @@ margin-top: 30px;
 font-size: 24px;
 color: #FFFFFF;
 font-family: "LufgaRegular";
-margin-bottom: 20px;
+margin-bottom: 30px !important;
+
 }
 
 
@@ -501,6 +505,7 @@ background-color: #FFFFFF;
       }
       .navbar-brand h2 {
         font-size: 20.53px;
+        margin-left: 0 !important;
     }
   }
   @media (max-width: 992px) {
