--- a/Pages/IQTest/style.css
+++ b/Pages/IQTest/style.css
@@ -22,13 +22,13 @@ body {
       src: url("/assets/Fonts/Recoleta/Recoleta-Medium.ttf");
     }
     .navbar {
-        background: transparent;
-        position: absolute !important;
-        width: 100% !important;
-        height: 93px;
-        z-index: 3 !important;
-        font-size: 20px !important;
-    }
+      position: absolute !important;
+      width: 100% !important;
+      height: 93px;
+      z-index: 3 !important;
+      font-size: 20px !important;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0) 100%) !important;
+  }
 
 .navbar.scrolled {
   background-color: rgba(0, 0, 0, 0.8) !important;
@@ -47,10 +47,11 @@ body {
 }
 
 .navbar-nav .nav-link {
+  margin-right: 40px;
   color: #000000 !important;
   opacity: 0.8;
   font-size: 20px !important;
-  font-family: "LufgaRegular" !important;
+  font-family: "LufgaRegular" ;
 
 }
 .active {
