--- a/Pages/Course/style.css
+++ b/Pages/Course/style.css
@@ -46,6 +46,7 @@ body {
 }
 
 .navbar-nav .nav-link {
+  margin-right: 40px;
   color: #ffffff !important;
   opacity: 0.8;
   font-size: 20px !important;
@@ -118,6 +119,7 @@ body {
     padding: 35px 0; /* 35px padding top and bottom */
     position: relative; /* Needed for positioning the horizontal line */
     opacity: 0.9;
+    cursor: pointer;
 
 }
 
